package com.g13.controller.arena.cardactivation.endofturn;

import com.g13.controller.arena.ArenaController;

public interface EndOfTurn {
    void activateEndOfTurn(ArenaController arenaController);
}
